--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     <!-- footer section -->
     <footer class="section-p1">
       <div class="col">
-        <img class="logo" src="../img/logo.png" alt="ecommerce-logo" />
+        <img class="logo" src="img/logo.png" alt="ecommerce-logo" />
         <h4>contact</h4>
         <p>
           <strong> address :- </strong> 562 wellington road, street 32, san
