--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
     <!-- footer section -->
     <footer class="section-p1">
       <div class="col">
-        <img class="logo" src="/img/logo.png" alt="ecommerce-logo" />
+        <img class="logo" src="img/logo.png" alt="ecommerce-logo" />
         <h4>contact</h4>
         <p>
           <strong> address :- </strong> 562 wellington road, street 32, san
@@ -183,11 +183,11 @@
         <h4>install app</h4>
         <p>from app store or google play</p>
         <div class="row">
-          <img src="/img/pay/app.jpg" alt="" />
-          <img src="/img/pay/play.jpg" alt="" />
+          <img src="img/pay/app.jpg" alt="" />
+          <img src="img/pay/play.jpg" alt="" />
         </div>
         <p>Secured Payment geteways</p>
-        <img src="/img/pay/pay.png" alt="" />
+        <img src="img/pay/pay.png" alt="" />
       </div>
       <div class="copyright">
         <p>@ 2020, tech2 etc- html css ecommerce template</p>
